# gitkit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile.txt  README.md  THESIS_DOCUMENTATION.md  pyproject.toml  test_output.txt
.github/workflows/: ci.yml  docker-publish.yml
docs/: DESIGN.md
src/gitkit/: __init__.py  cli.py  commands.py
tests/: test_commands.py
